2011-10-25  Karl Berry  <karl@gnu.org>

	* man/Makefile.am (EXTRA_DIST): add ginfo.h2m.
	* configure.ac (AM_MAINTAINER_MODE): reenable.
	* tp/Makefile.am (Makefile.tres): only rebuild the fragment
	in maintainer mode.
	* util/Makefile.am (texinfo.cat) [MAINTAINER_MODE]: make conditional.
	(dist_pkgdata_DATA): add texinfo.cat to here, and remove
	now-empty pkgdata_DATA.
	* README.dev,
	* autogen.sh: mention --enable-maintainer-mode.

2011-10-22  Karl Berry  <karl@gnu.org>

	* man/Makefile.am (man_rule_0): only ginfo, not ginfokey.

2011-10-22  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi: add some required punctuation commands.

2011-10-21  Karl Berry  <karl@gnu.org>

	* doc/texi2dvi,
	* tp/texi2any.pl: help message changes to help help2man.
	* man: new subdirectory.
	* doc/Makefile.am, doc/*.5, info/ginfo.h2m: move man files.

2011-10-19  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\var, \doabbr, \doacronym): reset \spacefactor=1000
	so capital letters in arg don't change spacing.
	* doc/texinfo.txi (Not Ending a Sentence): briefly mention
	commands which change the normal sentence-spacing rules.

2011-10-18  Karl Berry  <karl@gnu.org>

	* util/texindex.c, util/texi2pdf,
	info/info.c, info/infokey.c,
	install-info/install-info.c: update copyright year.

2011-10-17  Karl Berry  <karl@gnu.org>

	* tp/Makefile.am: rename include to Makefile.tres.
	(Makefile.tres): regenerate.
	* tp/maintain/regenerate_file_lists.pl: add copyright,
	chdir to working directory.
	* autogen.sh: invoke it.

2011-10-16  Karl Berry  <karl@gnu.org>

	* Makefile.am (po-check): update to find tp/ Perl files,
	not makeinfo/ C files.

	* AUTHORS, INSTALL, INTRODUCTION, NEWS, README, README-alpha,
	README.dev, TODO, */README: small text updates.

	* doc/texinfo.txi (Not Ending a Sentence): also mention right quote
	and brackets.

2011-10-15  Karl Berry  <karl@gnu.org>

	* system.h: rm decls for xmalloc, xrealloc, xstrdup.
	rm old DMALLOC debugging stuff.
